--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/sequelize": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "dotenv": "^16.0.0",
     "mysql2": "^2.3.3",
