--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,6 +46,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.26",
     "@types/sequelize": "^4.28.11",
     "@types/supertest": "^2.0.11",
