--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@lib/my-logger": [
+        "libs/my-logger/src"
+      ],
+      "@lib/my-logger/*": [
+        "libs/my-logger/src/*"
+      ]
+    }
   }
 }
