--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@lib/my-logger": [
-        "libs/my-logger/src"
-      ],
-      "@lib/my-logger/*": [
-        "libs/my-logger/src/*"
-      ]
+      "@lib/my-logger": ["libs/my-logger/src"],
+      "@lib/my-logger/*": ["libs/my-logger/src/*"]
     }
   }
 }
