--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
