--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "@types/nodemailer": "^6.4.4",
+    "@types/vscode": "^1.65.0",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
