--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/vscode": "^1.65.0",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
