--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs/apollo": "^10.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.7",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
@@ -31,12 +33,14 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/nodemailer": "^6.4.4",
     "@types/vscode": "^1.65.0",
+    "apollo-server-express": "^3.6.4",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
+    "graphql": "^16.3.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
