--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.4.2",
     "@profi.co/eslint-plugin": "^1.0.6",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
@@ -112,7 +112,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@lib/my-logger(|/.*)$": "<rootDir>/libs/my-logger/src/$1"
+      "^@lib/my-logger(|/.*)$": "<rootDir>/libs/my-logger/src/$1",
+      "^@app/database(|/.*)$": "<rootDir>/libs/database/src/$1"
     }
   }
 }
